<resources>
    <string name="app_name">BundesligaClubs</string>
    <string name="detail_club">Fußball-Club Bayern München e.V., juga dikenal sebagai FC Bayern München, FC Bayern Munich, atau FC Bayern, adalah sebuah klub olahraga Jerman yang berbasis di München, Bavaria. Hal ini terkenal karena tim sepak bola profesional, yang bermain di Bundesliga, peringkat teratas sistem liga sepak bola Jerman, dan merupakan klub paling sukses dalam sejarah sepak bola Jerman, setelah memenangkan rekor 29 gelar nasional dan 19 piala nasional.</string>
    <string name="pindah_ke_club">Pindah ke Club</string>
    <string name="club_name">Nama Club</string>
    <string name="detail">Detail</string>
    <string name="about">About</string>
    <string name="fc_bayern_munchen">FC Bayern Munchen</string>
    <string name="tahun_berdiri">Tahun Berdiri :</string>
    <string name="_4_februari_1900">4 Februari 1900</string>
    <string name="nama_club">Nama Club :</string>
    <string name="nama_pelatih">Nama Pelatih :</string>
    <string name="detail_club_name">Detail Club</string>
    <string name="detail_ini_club">detail ini club</string>
    <string name="name">ACHMAD SOBARI</string>
    <string name="email">ahmadsobarry@gmail.com</string>
</resources>
